# bioimageit-omero

./: README.md  requirements.txt  setup.cfg
bioimageit_omero/: __init__.py  data_omero.py
