[metadata]
name = bioimageit-omero
version = 0.1.3
author = Sylvain Prigent and BioImageIT team
author_email = bioimageit@gmail.com
license = GPL-2.0-only
url = https://github.com/bioimageit/bioimageit-omero
description = Enable using Omero as a backend database for BioImageIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: bioimageit_core
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
project_urls =
    Bug Tracker = https://github.com/bioimageit/bioimageit-omero/issues
    Documentation = https://github.com/bioimageit/bioimageit-omero#README.md
    Source Code = https://github.com/bioimageit/bioimageit-omero
    User Support = https://github.com/bioimageit/bioimageit-omero/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    scikit-image
    bioimageit_formats>=0.1.3
    bioimageit_core>=0.1.3


[options.entry_points] 
bioimageit.plugin = 
    bioimageit-omero = bioimageit_omero
